# mgnify-bgcs-common-core

./: CHANGELOG.md  pyproject.toml
config/: chemont_classifier.yaml  esmc_embedder.yaml
src/common_core/: bgc_region_extractor.py  chemont_classifier.py  contig_length_filter.py  esmc_embedder.py  gbk_id_utils.py  helpers.py  io.py
src/common_core/bgc_class/: __init__.py  bgc_types.py  normalize.py
src/common_core/chemont/: __init__.py  classifier.py  classyfire_client.py  ontology.py  similarity.py
src/common_core/clustering/: __init__.py  cli.py  io.py  knn.py  layout.py  leiden.py  partial.py  schema.py  scoring.py  similarity.py
src/common_core/clustering/gpu/: __init__.py  layout.py  leiden.py  similarity.py
src/common_core/metrics/: __init__.py  curves.py  decoding.py  intervals.py  losses.py  range.py
tests/: test_bgc_class_normalize.py  test_chemont_similarity.py  test_classyfire_client.py  test_clustering_scoring.py  test_clustering_similarity_gpu.py  test_gbk_id_utils.py  test_metrics_range.py
