[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "mgnify-bgcs-common-core"
description = "Shared core utilities for MGnify BGCs"
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = [
]

[project.optional-dependencies]
esmc = [
  "torch>=2.7",
  "esm>=3.2.2",
  "numpy>=2.0",
  "pyarrow>=23.0",
  "biopython>=1.83",
  "tqdm>=4",
  "pydantic>=2",
  "pydantic-settings>=2",
  "PyYAML>=6",
]
dev = [
  "pytest>=8,<9",
  "ruff>=0.6,<1",
]

[project.scripts]
esmc-embed     = "common_core.esmc_embedder:main"
esmc-embed-bgc = "common_core.esmc_embedder:main_bgc"


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {file = "version.txt"}
