[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "mgnify-bgcs-common-core"
description = "Shared core utilities for MGnify BGCs"
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = [
  "biopython>=1.83",
  "pydantic>=2",
  "pydantic-settings>=2",
  "PyYAML>=6",
]

[project.optional-dependencies]
esmc = [
  "torch>=2.7",
  "esm>=3.2.2",
  "numpy>=2.0",
  "pyarrow>=23.0",
  "biopython>=1.83",
  "tqdm>=4",
  "pydantic>=2",
  "pydantic-settings>=2",
  "PyYAML>=6",
]
chemont = [
  "rdkit",
  "pydantic>=2",
  "pydantic-settings>=2",
  "PyYAML>=6",
]
ml = [
  # Metric primitives + losses that pull in the ML stack. Kept as an extra so
  # the portal / ETL side of the monorepo can install common-core without torch.
  "torch>=2.7",
  "numpy>=2.0",
  "scikit-learn>=1.5",
  "scipy>=1.13",
]
hpc-cpu = [
  "numpy>=2.0",
  "scipy>=1.13",
  "python-igraph>=0.11",
  "leidenalg>=0.10",
  "umap-learn>=0.5",
  "numba>=0.60",
  "pyarrow>=15",
  "joblib>=1.4",
]
hpc-gpu = [
  # Additive on top of hpc-cpu. Pin to the RAPIDS release matching the
  # cluster's CUDA toolkit; conda/mamba is the safer install path on most
  # HPC sites — see the README runbook.
  "cupy-cuda12x>=13",
  "cuml-cu12>=24.10",
  "cugraph-cu12>=24.10",
]
dev = [
  "pytest>=8,<9",
  "ruff>=0.6,<1",
]

[project.scripts]
esmc-embed           = "common_core.esmc_embedder:main"
esmc-embed-bgc       = "common_core.esmc_embedder:main_bgc"
contig-length-filter = "common_core.contig_length_filter:main"
bgc-region-extractor = "common_core.bgc_region_extractor:main"
chemont-classify     = "common_core.chemont_classifier:main"
bgc-cluster          = "common_core.clustering.cli:main"


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {file = "version.txt"}
